@@ -1,4 +1,4 @@
-// $Id: CHANGELOG.txt,v 1.299 2009-03-14 16:41:29 webchick Exp $
+// $Id: CHANGELOG.txt,v 1.300 2009-03-15 01:53:16 webchick Exp $
 
 Drupal 7.0, xxxx-xx-xx (development version)
 ----------------------
@@ -34,6 +34,8 @@ Drupal 7.0, xxxx-xx-xx (development version)
     * Highlight duplicate URL aliases.
     * Renamed "input formats" to "text formats".
     * Added configurable ability for users to cancel their own accounts.
+    * Added optional filter that can use [internal:node/123] to link to internal
+      pages.
 - Performance:
     * Improved performance on uncached page views by loading multiple core
       objects in a single database query.
